--- a/swa-cli.config.json
+++ b/swa-cli.config.json
@@ -3,8 +3,12 @@
   "configurations": {
     "my-resume": {
       "appLocation": ".",
+      "apiLocation": "api",
       "outputLocation": ".next",
+      "apiLanguage": "node",
+      "apiVersion": "16",
       "appBuildCommand": "npm run build",
+      "apiBuildCommand": "npm run build --if-present",
       "run": "npm run dev",
       "appDevserverUrl": "http://localhost:3000"
     }
